--- a/src/wagtail_2fa/templates/wagtail_2fa/otp_form.html
+++ b/src/wagtail_2fa/templates/wagtail_2fa/otp_form.html
@@ -3,6 +3,15 @@
 {% block titletag %}{% trans "Sign in" %}{% endblock %}
 {% block bodyclass %}login{% endblock %}
 
+{% block extra_css %}
+    <style>
+        .form-actions .button+.button {
+            margin-top: 0.75rem;
+            margin-left: 0;
+        }
+    </style>
+{% endblock %}
+
 {% block furniture %}
     <main class="content-wrapper" id="main">
         <h1>{% block branding_login %}{% trans "Enter your two-factor authentication code" %}{% endblock %}</h1>
@@ -44,7 +53,9 @@
             <footer class="form-actions">
                 {% block submit_buttons %}
                     <button type="submit" class="button button-longrunning" tabindex="3" data-clicked-text="{% trans 'Signing in…' %}">{% icon name="spinner" %}<em>{% trans 'Sign in' %}</em></button>
-                    <a href="{% url "wagtailadmin_logout" %}" class="button button-secondary" tabindex="4">{% trans 'Sign out' %}</a>
+                    <span style="margin-top:1rem;display:block;">
+                        <a href="{% url 'wagtailadmin_logout' %}" class="button button-secondary" tabindex="4">{% trans 'Sign out' %}</a>
+                    </span>
                 {% endblock %}
             </footer>
         </form>
