--- a/src/wagtail_2fa/templates/wagtail_2fa/otp_form.html
+++ b/src/wagtail_2fa/templates/wagtail_2fa/otp_form.html
@@ -64,7 +64,7 @@
 
         {% block branding_logo %}
             <div class="login-logo">
-                <img class="login-logo-img" alt="" src="{% versioned_static 'wagtailadmin/images/wagtail-logo.svg' %}" />
+               {% include "wagtailadmin/logo.html"%}
             </div>
         {% endblock %}
     </main>
